@@ -2,11 +2,15 @@ Version 1.3 (The uncertain future):
 
 - Feature: It is now possible to dump the content of a SWF file to stdout by
            doing 'dissector.jar -dump <input file>'.
+- Feature: It is now possible to decompress SWF files by doing
+           'dissector.jar -decompress <input file> -o <output file>'.
 - Feature: Function bodies defined by the ActionScript 2 functions
            DefineFunction and DefineFunction2 are now aligned better in the
 	   GUI to improve readability of the code.
 - Feature: Individual elements of a SWF file can now be dumped to a new file
            by right-clicking on the elements in the main tree of the GUI.
+- Bugfix: Fixed a bug in the Minimizer that prevented it from working with
+          compressed SWF files.
 
 Version 1.2 (June 5th 2011):
 
